shifted logo fix

--- a/src/scss/core/layout/_header-bottom.scss
+++ b/src/scss/core/layout/_header-bottom.scss
@@ -6,4 +6,8 @@ $component-name: header-bottom;
       min-height: 4rem;
     }
   }
+  
+  &__h1 {
+    font-size: unset;
+  }
 }
